[update] container title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main class="container">
-        <h1 class="container__title"> IA Against The Crime  </h1>
+        <h1 class="container__title"> IA anticrimen  </h1>
         <h2> Por: Samuel Medina</h2>
         <div class="container_text">
             <p>
