[update] body background color

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <main class="container">
         <h1 class="container__title"> IA anticrimen  </h1>
-        <h2> Por: Samuel Medina</h2>
+        <h2 class="container__subtitle"> Por: Samuel Medina</h2>
         <div class="container_text">
             <p>
-                Uno de los problemas que más se presentan en mi comunidad (bueno, creo que en gran parte del país) es la delicuencia;  pero en particular, me quiero enfocar eb los asaltos ya sea en el transporte publico o bien a la gente que se encuentra caminando felizmente en las calles.
+                Uno de los problemas que más se presentan en mi comunidad (bueno, creo que en gran parte del país) es la delicuencia;  pero en particular, me quiero enfocar en los asaltos ya sea en el transporte publico o bien a la gente que se encuentra caminando felizmente en las calles.
             </p>
             <p>
                 La solución que propongo es entrenar una inteligencia artificial con los horarios y zonas donde se cometió este crimen, de tal forma que se pueda encontrar un patron y así las autoridades puedan poner enfasis en aquellos lugares y horarios de peligro.
